[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "CLI to fetch PubMed papers with pharma affiliations"
authors = ["Mummadi Harish <harishmhk11@gmail.com>"]
packages = [{ include = "pubmed_fetcher", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = "^2.32.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"